# ai-service

./: .env.example  .gitignore  README.md  pyproject.toml  requirements.txt
app/: main.py  worker.py
app/api/: matting.py  tasks.py  upscale.py
app/core/: config.py  model_registry.py
app/models/: __init__.py  birefnet_model.py  ocr_model.py  realesrgan_model.py
app/services/: matting_service.py  model_service.py  task_service.py  upscale_service.py
app/services/result_processors/: __init__.py  base.py  ocr.py  realesrgan.py  segmentation.py
app/utils/: minio_client.py  redis_client.py
docs/: api-design.md  deployment.md
docs/architecture/: system-architecture.md
docs/deployment/: ray-deployment-guide.md
docs/examples/: image-segmentation-example.md
models/BiRefNet/: README.md
models/BiRefNet_HR/: birefnet.py
models/BiRefNet_portrait/: README.md  config.json  handler.py
models/RealESRGAN/: model.py
